Fixed regression from be3fc24 where linkWrapper in navbar was being clipped

--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -34,7 +34,7 @@
     width: 45px;
     height: 30px;
     box-shadow: none;
-    margin-right: 45%;  /* Adjust the logo's right margin */
+    margin-right: 44%;  /* Adjust the logo's right margin */
     margin-left: 20px;
     white-space: nowrap;
 
